# graphical-learning

./: .clang-format  .gitignore  CMakeLists.txt  README.md  helper.py  pyproject.toml
assets/shaders/opengl/: simple.frag  simple.geom  simple.vert
assets/shaders/vulkan/: simple.vert
cmake/: ntt-assimpConfig.cmake  ntt-glfwConfig.cmake  ntt-glmConfig.cmake  ntt-profilerConfig.cmake  ntt-stbConfig.cmake  ntt-vulkanConfig.cmake
src/: common.h  main.cpp  pipeline.cpp  pipeline.h  shader.cpp  shader.h  texture.cpp  utils.h  vertex_buffer.h
src-opengl/: texture.h  utils.cpp  vertex_buffer.cpp
src-vulkan/: common.h  main.cpp
